# take_home

./: README.md  compose.yaml  package-lock.json
backend/: Cargo.toml  Dockerfile
backend/src/: main.py  main.rs
backend/tempDatabase/: templates.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: README.md
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: axios.ts
frontend/src/components/: MenuAppBar.tsx  TemplateMenu.css  TemplateMenu.tsx
frontend/src/mocks/: handlers.ts
frontend/src/pages/: CreateTemplate.tsx  ReadMePage.tsx  TemplateList.css  TemplateList.tsx
rubi_be/: Cargo.toml  Dockerfile  api.Dockerfile
rubi_be/src/: main.rs
